# nova-link

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  PLAN.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: bottom-click-dialog.md
.planning/phases/01-onboarding-guide/: 01-PLAN.md  01-SUMMARY.md
.planning/phases/02-desktop-integration/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md
.planning/phases/03-sqlite/: 03-01-PLAN.md  03-sqlite-01-SUMMARY.md
.planning/todos/pending/: 2026-03-18-kuai-jie-jian-zi-ding-yi-she-zhi.md
docs/: AUTO_UPDATE.md
python_channel/: README.md  config_changes.md  localpet.py
src/: App.vue  global.d.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: command_runner.rs  config.rs  lib.rs  main.rs  powershell.rs  window.rs
src-tauri/src/commands/: autostart.rs  chat_history.rs  env_check.rs  hotkey.rs  identity.rs  llm.rs  mcp.rs  mod.rs  soul.rs  user.rs  window.rs  window_monitor.rs
src-tauri/src/mcp/: http_server.rs  mod.rs  server.rs  types.rs
src-tauri/templates/: identity.md  soul.md  user.md
src/components/: CharacterSettingsModal.vue  ChatPanel.vue  ContextMenu.vue  EnvironmentCheckModal.vue  Live2DContainer.vue  OnboardingGuide.vue  SettingsModal.vue  SpeechBubble.vue  TitleBar.vue  index.ts
src/composables/: index.ts  useAutostart.ts  useChat.ts  useChatHistory.ts  useClickThrough.ts  useEnvCheck.ts  useGlobalDialog.ts  useGreeting.ts  useHotkey.ts  useLive2D.ts  useNotification.ts  useOnboarding.ts  useSettings.ts  useSmartClickThrough.ts  useSpeechBubble.ts  useWebSocket.ts  useWindow.ts
src/models/: README.md
src/sdk/: SDK.md  client.ts  index.ts  types.ts
src/utils/: animationState.ts  emotionParser.ts  gpuHitTest.ts  mouseInteraction.ts  pixelHitTest.ts  updater.ts  windowMonitor.ts
