[package]
name = "nova-link"
version = "0.1.0"
description = "Nova Link desktop pet with Live2D"
authors = ["Nova Link"]
edition = "2021"

[lib]
name = "nova_link_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
