[package]
name = "nova-link"
version = "0.1.0"
description = "Nova Link desktop pet with Live2D"
authors = ["Nova Link"]
edition = "2021"

[lib]
name = "nova_link_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"
tera = "1"
once_cell = "1"
http = "1"
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = "0.1"
tower = { version = "0.4", features = ["util"] }
async-trait = "0.1"
http-body-util = "0.1"
tauri-plugin-log = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
active-win-pos-rs = "0.10.0"
screenshots = "0.8.10"
enigo = "0.6.1"
base64 = "0.22.1"
image = "0.25.10"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
